subdir('src')
subdir('src/designflow')
subdir('src/plugins')
subdir('src/tools')

py.install_sources(cumulus, subdir: 'coriolis/cumulus')
py.install_sources(designflow, subdir: 'coriolis/cumulus/designflow')
py.install_sources(plugins, subdir: 'coriolis/cumulus/plugins')
py.install_sources(block, subdir: 'coriolis/cumulus/plugins/block')
py.install_sources(chip, subdir: 'coriolis/cumulus/plugins/chip')
py.install_sources(core2chip, subdir: 'coriolis/cumulus/plugins/core2chip')
py.install_sources(harness, subdir: 'coriolis/cumulus/plugins/harness')
py.install_sources(macro, subdir: 'coriolis/cumulus/plugins/macro')
py.install_sources(sram, subdir: 'coriolis/cumulus/plugins/sram')
py.install_sources(tools, subdir: 'coriolis/cumulus/tools')




