subdir('src')
subdir('src/designflow')
subdir('src/designflow/scripts')
subdir('src/plugins')
subdir('src/tools')

py.install_sources(cumulus, subdir: 'coriolis')
py.install_sources(designflow, subdir: 'coriolis/designflow')
py.install_sources(designflow_scripts, subdir: 'coriolis/designflow/scripts')
py.install_sources(plugins, subdir: 'coriolis/plugins')
py.install_sources(block, subdir: 'coriolis/plugins/block')
py.install_sources(chip, subdir: 'coriolis/plugins/chip')
py.install_sources(core2chip, subdir: 'coriolis/plugins/core2chip')
py.install_sources(harness, subdir: 'coriolis/plugins/harness')
py.install_sources(macro, subdir: 'coriolis/plugins/macro')
py.install_sources(sram, subdir: 'coriolis/plugins/sram')
py.install_sources(tools, subdir: 'coriolis/tools')




