PROJECT(EQUINOX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

SET(CMAKE_C_FLAGS_DEBUG             "-g -Wall" CACHE STRING "Debug options." FORCE)
SET(CMAKE_CXX_FLAGS_DEBUG           "-Winline -g -Wall" CACHE STRING "Debug options." FORCE)
SET(CMAKE_LINKER_FLAGS_DEBUG        "-Winline -pg"      CACHE STRING "Debug options." FORCE)
SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "-Winline -pg"      CACHE STRING "Debug options." FORCE)
SET(CMAKE_MODULE_LINKER_FLAGS_DEBUG "-Winline -pg"      CACHE STRING "Debug options." FORCE)
SET(CMAKE_EXE_LINKER_FLAGS_DEBUG    "-Winline -pg"      CACHE STRING "Debug options." FORCE)

SET(CMAKE_MODULE_PATH "$ENV{HURRICANE_TOP}/share/cmake_modules/")

SET(QT_USE_QTXML "true")

FIND_PACKAGE(Qt4 REQUIRED) # find and setup Qt4 for this project
FIND_PACKAGE(HURRICANE REQUIRED)
FIND_PACKAGE(CORIOLIS REQUIRED)

SET_LIB_LINK_MODE()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(cmake_modules)
